Add gallery uploader

--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -13,6 +13,8 @@
 
       <app-schedule></app-schedule>
 
+      <app-gallery></app-gallery>
+
       <div id="really-long-div">
             
         </div>
