--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,4 +1,5 @@
 <div id="details-section">
+    <h1>Schedule</h1>
     <div uk-grid class="uk-grid-divider">
         <div class="uk-width-1-2 uk-text-right">
             <div class="time">5:00pm</div>
