Add RSVP section

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,3 +1,48 @@
-<p>
-  rsvp works!
-</p>
+<div id="rsvp-section">
+
+  <div id="plate" class="front rsvp-container">
+    <form uk-grid class="uk-grid-small uk-text-center">
+    
+            <legend class="uk-legend">RSVP</legend>
+
+            <div class="uk-margin uk-width-1-2">
+                <input class="uk-input" type="text" placeholder="First Name">
+            </div>
+            <div class="uk-margin uk-width-1-2">
+                <input class="uk-input" type="text" placeholder="Last Name">
+            </div>
+    
+            <div class="uk-margin uk-width-1-1">
+                <select class="uk-select">
+                    <option value="" disabled>Meal option</option>
+                    <option value="chicken">Chicken</option>
+                    <option value="fish">Fish</option>
+                    <option value="vegetarian">Vegetarian</option>
+                </select>
+            </div>
+
+            <div class="uk-margin uk-width-1-1">
+                <input class="uk-input" type="text" placeholder="Dietary Restrictions">
+            </div>
+
+            <div class="uk-button uk-button-default" id="send"><span>Submit</span></div>
+    </form>
+  </div>
+  <div id="container" class="beginning">
+      <div id="left-wing">
+          <div class="top_left curvable"> </div>
+          <div class="bottom_left curvable"> </div>
+          <div class="wing wing1"></div>
+          <div class="wing wing2"></div>
+      </div>
+
+      <div id="right-wing">
+          <div class="top_right curvable"> </div>
+          <div class="bottom_right curvable"> </div>
+          <div class="wing wing3"></div>
+          <div class="wing wing4"></div>
+      </div>
+
+  </div>
+</div>
+<br />
