--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -9,7 +9,7 @@
                 <p class="title uk-text-lead">Ceremony</p>
                 <p class="location">Buffalo Wild Wings</p>
                 <p class="address">1320 P. St.</p>
-                <button class="uk-button uk-button-secondary">Map</button>
+                <button class="uk-button uk-button-default">Map</button>
             </div>
         </div>
 
@@ -21,10 +21,11 @@
                     <p class="title uk-text-lead">Reception</p>
                     <p class="location">Chez Hay</p>
                     <p class="address">440 S 11th St.</p>
-                    <button class="uk-button uk-button-secondary" id="reception-map-button">Map</button>
+                    <button class="uk-button uk-button-default" id="reception-map-button">Map</button>
 
                     <iframe id="reception-map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Chez%20Hay&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ" allowfullscreen></iframe>
                 </div>
             </div>
     </div>
 </div>
+<hr class="uk-divider-icon" />
