--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -8,16 +8,16 @@
               <img id="ne-img" src="assets/img/ne.png" />
           </div>
       </div>
+      <div class="content-wrapper">
+            <app-navigation></app-navigation>
 
-      <app-navigation></app-navigation>
+            <app-schedule></app-schedule>
 
-      <app-schedule></app-schedule>
+            <app-gallery></app-gallery>
 
-      <app-gallery></app-gallery>
-
-      <div id="really-long-div">
-            
+            <app-rsvp></app-rsvp>
         </div>
+
         <div id="footer">
             <img src="assets/img/ring-box.png">
             <div id="sub-footer"><div id="countdown" uk-countdown="date: 2019-11-02T18:00:00+00:00">See you in <span class="uk-countdown-number uk-countdown-days uk-text-small"> </span> days!</div></div>
