--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,24 @@
 <div id="photos-section">
   <h1>Photos</h1>
+
+  <!-- <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="autoplay: true">
+      <ul class="uk-slideshow-items">
+          <li>
+              <img src="assets/img/gallery/1.jpg" alt="" uk-cover>
+          </li>
+          <li>
+              <img src="assets/img/gallery/2.jpg" alt="" uk-cover>
+          </li>
+          <li>
+              <img src="assets/img/gallery/3.jpg" alt="" uk-cover>
+          </li>
+      </ul>
+
+      <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+      <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+
+  </div> -->
+
   <div class="js-upload uk-placeholder uk-text-center">
       <span uk-icon="icon: cloud-upload"></span>
       <span class="uk-text-middle">Add your wedding pics by dropping them here or</span>
@@ -11,6 +30,8 @@
   <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
 
 </div>
+
+<hr class="uk-divider-icon" />
 
 <script>
 
