--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -15,6 +15,8 @@
 
             <app-gallery></app-gallery>
 
+            <app-registry></app-registry>
+
             <app-rsvp></app-rsvp>
         </div>
 
