--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -6,23 +6,23 @@
             <legend class="uk-legend">RSVP</legend>
 
             <div class="uk-margin uk-width-1-2">
-                <input class="uk-input" type="text" placeholder="First Name">
+                <input class="uk-input" type="text" id="firstName" placeholder="First Name">
             </div>
             <div class="uk-margin uk-width-1-2">
-                <input class="uk-input" type="text" placeholder="Last Name">
+                <input class="uk-input" type="text" id="lastName" placeholder="Last Name">
             </div>
     
             <div class="uk-margin uk-width-1-1">
-                <select class="uk-select">
+                <select class="uk-select" id="mealOption" >
                     <option value="" disabled>Meal option</option>
-                    <option value="chicken">Chicken</option>
-                    <option value="fish">Fish</option>
-                    <option value="vegetarian">Vegetarian</option>
+                    <option value="Chicken">Chicken</option>
+                    <option value="Fish">Fish</option>
+                    <option value="Vegetarian">Vegetarian</option>
                 </select>
             </div>
 
             <div class="uk-margin uk-width-1-1">
-                <input class="uk-input" type="text" placeholder="Dietary Restrictions">
+                <input class="uk-input" type="text" id="dietaryRestrictions" placeholder="Dietary Restrictions">
             </div>
 
             <div class="uk-button uk-button-default" id="send"><span>Submit</span></div>
