--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,6 +7,8 @@
                         <li><a href="#photos-section">Photos</a></li>
                         <li><a href="#registry-section">Registry</a></li>
                         <li><a href="#rsvp-section">RSVP</a></li>
+                        <li><a href="#story-section">Our Story</a></li>
+                        <li><a href="#people-section">People</a></li>
                     </ul>
                 </div>
             </nav>
