--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <link rel="stylesheet" href="assets/css/uikit.min.css" />
-        <link rel="stylesheet" href="assets/css/site.css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-        <script src="assets/js/uikit-icons.min.js"></script>
-        <script src="assets/js/map.js"></script>
-        <script src="assets/js/uikit.min.js"></script>
-        <script src="assets/js/jquery-1.9.1.min.js"></script>
-        <script src="assets/js/jssor.slider.min.js"></script>
+<link rel="stylesheet" href="assets/css/dropzone.css" />
+<link rel="stylesheet" href="assets/css/site.css" />
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<script src="assets/js/uikit-icons.min.js"></script>
+<script src="assets/js/map.js"></script>
+<script src="assets/js/uikit.min.js"></script>
+<script src="assets/js/jquery-1.9.1.min.js"></script>
+<script src="assets/js/jssor.slider.min.js"></script>
+
 <app-wedding></app-wedding>
