--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -4,3 +4,8 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+.dropzone {
+    background-color: rgb(61,61,61);
+    border: 1px dashed white;
+}
