--- a/src/app/registry/registry.component.html
+++ b/src/app/registry/registry.component.html
@@ -1,4 +1,4 @@
-<div id="registry-section">
+<div class="site-section" id="registry-section">
   <h1>Registries</h1>
   <div class="uk-grid-medium uk-text-center" uk-grid>
     <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://amazon.com" target="_blank"><img src="../../assets/img/amazon-logo.png" alt="Amazon"></a></div>
