--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<div id="details-section">
+<div class="site-section" id="details-section">
     <ul uk-switcher class="uk-subnav">
         <li><a href="#">Schedule</a></li>
         <li><a href="#">Hotel Block</a></li>
