--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,4 +1,4 @@
-<div id="rsvp-section">
+<div class="site-section" id="rsvp-section">
 
   <div id="plate" class="front rsvp-container">
     <form uk-grid class="uk-grid-small uk-text-center">
