--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -36,3 +36,7 @@ body {
     height: 30px;
     background-color: rgb(39, 39, 39);
 }
+.site-section {
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
