Update ng cli version

--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -25,8 +25,9 @@
                     <div class="uk-width-1-2">
                         <div class="schedule-item">
                             <p class="title uk-text-lead">Reception</p>
-                            <p class="location">Chez Hay</p>
-                            <p class="address">440 S 11th St.</p>
+                            <p class="location">Roca Ridge</p>
+                            <p class="address">5265 Prairie Sage Drive</p>
+                            <p class="address">Roca, NE</p>
                             <button class="uk-button uk-button-default" id="reception-map-button">Map</button>
 
                             <iframe id="reception-map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Chez%20Hay&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ" allowfullscreen></iframe>
