--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -13,9 +13,10 @@
                 <div class="uk-width-1-2">
                     <div class="schedule-item">
                         <p class="title uk-text-lead">Ceremony</p>
-                        <p class="location">Buffalo Wild Wings</p>
-                        <p class="address">1320 P. St.</p>
-                        <button class="uk-button uk-button-default">Map</button>
+                        <p class="location">Roca Ridge</p>
+                        <p class="address">5265 Prairie Sage Drive</p>
+                        <p class="address">Roca, NE</p>
+                        <!-- <button class="uk-button uk-button-default">Map</button> -->
                     </div>
                 </div>
 
@@ -30,7 +31,7 @@
                             <p class="address">Roca, NE</p>
                             <button class="uk-button uk-button-default" id="reception-map-button">Map</button>
 
-                            <iframe id="reception-map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Chez%20Hay&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ" allowfullscreen></iframe>
+                            <iframe id="reception-map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Roca%20Ridge&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ&zoom=10" allowfullscreen></iframe>
                         </div>
                     </div>
             </div>
