--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,4 +1,5 @@
 <div class="site-section" id="photos-section">
+    <h2>Photos</h2>
     <ul uk-switcher class="uk-subnav">
         <li><a href="#">Upload</a></li>
         <li><a href="#">Gallery</a></li>
