--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -3,10 +3,11 @@
             Hero header
          -->
       <div class="uk-cover-container uk-height-viewport" >
-          <img uk-cover src="assets/img/demo-hero.JPG" id="cover-img"/>
+          <img uk-cover src="assets/img/hero.jpg" id="cover-img"/>
           <div id="title">
               <img id="ne-img" src="assets/img/ne.png" />
           </div>
+          <p id="img-caption">A sunny day above the Dismal River in the Nebraska Sandhills</p>
       </div>
       <div class="content-wrapper">
             <app-navigation></app-navigation>
