--- a/src/app/registry/registry.component.html
+++ b/src/app/registry/registry.component.html
@@ -3,7 +3,7 @@
   <div class="uk-grid-medium uk-text-center" uk-grid>
     <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://amazon.com" target="_blank"><img src="../../assets/img/amazon-logo.png" alt="Amazon"></a></div>
     <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://www.crateandbarrel.com/" target="_blank"><img src="../../assets/img/crate-logo.png" alt="Crate &amp; Barrel"></a></div>
-    <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://www.heifer.org/" target="_blank"><img src="../../assets/img/heifer-logo.png" alt="Heifer International"></a></div>
+    <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://donate.nationalparks.org/page/23790/donate/1?chain" target="_blank"><img src="../../assets/img/npf.png" alt="National Park Foundation"></a></div>
   </div>
   </div>
   <hr class="uk-divider-icon" />
