--- a/src/app/wedding/wedding.component.css
+++ b/src/app/wedding/wedding.component.css
@@ -28,6 +28,7 @@ body {
 
 #cover-img {
     max-width: 100%;
+    opacity: 0.4;
 }
 
 #countdown {
@@ -40,4 +41,16 @@ body {
 }
 #footer {
     margin-top: 200px;
+}
+#ne-img {
+    margin-top: -25%;
+}
+
+#img-caption {
+    position: absolute;
+    bottom: -20px;
+    right: 0;
+    font-size: 14px;
+    background-color: #13131361;
+    padding: 5px;
 }
