--- a/src/app/wedding/wedding.component.css
+++ b/src/app/wedding/wedding.component.css
@@ -31,6 +31,20 @@ body {
     opacity: 0.4;
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+    #cover-img {
+        max-width: none;
+        left: 90%;
+    }
+}
+
+@media (max-width: 768px) {
+    #cover-img {
+        max-width: none;
+        left: 120%
+    }
+}
+
 #countdown {
     font-size: 12px;
 }
