Add Google sheets logic to signup form.
Don't look at this bad code.

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -11,18 +11,14 @@
             <div class="uk-margin uk-width-1-2">
                 <input class="uk-input" type="text" id="lastName" placeholder="Last Name">
             </div>
-    
-            <div class="uk-margin uk-width-1-1">
-                <select class="uk-select" id="mealOption" >
-                    <option value="" disabled>Meal option</option>
-                    <option value="Chicken">Chicken</option>
-                    <option value="Fish">Fish</option>
-                    <option value="Vegetarian">Vegetarian</option>
-                </select>
-            </div>
+
+            <div class="uk-button uk-button-default" id="lookup-button"><span>Lookup</span></div>
 
             <div class="uk-margin uk-width-1-1">
-                <input class="uk-input" type="text" id="dietaryRestrictions" placeholder="Dietary Restrictions">
+                <input class="uk-input" type="text" id="dietaryRestrictions" placeholder="Dietary Restrictions" hidden>
+            </div>
+            <div class="invitees">
+                <!--FILL ME!-->
             </div>
 
             <div class="uk-button uk-button-default" id="send"><span>Submit</span></div>
