--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -7,7 +7,7 @@
           <div id="title">
               <img id="ne-img" src="assets/img/ne.png" />
           </div>
-          <p id="img-caption">A sunny day above the Dismal River in the Nebraska Sandhills</p>
+          <p id="img-caption">A sunny day near the Dismal River in the Nebraska Sandhills</p>
       </div>
       <div class="content-wrapper">
             <app-navigation></app-navigation>
