--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -6,13 +6,26 @@
     margin-bottom: 200px !important;
 }
 
-#send {
+#send, #lookup-button {
     margin-left: auto;
     margin-right: auto;
 }
 
-#send span {
+#send span, #lookup-button span {
     margin-left: 10px;
+}
+
+.guestname {
+    text-align: left !important;
+    font-size: 1.2rem !important;
+}
+
+.diet-input {
+    margin-top: 10px;
+}
+
+.invitees {
+    height: 600px;
 }
 
 /* From: https://codepen.io/cihadturhan/pen/KIJdD */
