--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -7,7 +7,7 @@
           <div id="title">
               <img id="ne-img" src="assets/img/ne.png" />
           </div>
-          <p id="img-caption">A sunny day above the Dismal River in the Nebraska Sandhills</p>
+          <p id="img-caption">A sunny day near the Dismal River in the Nebraska Sandhills</p>
       </div>
       <div class="content-wrapper">
             <app-navigation></app-navigation>
@@ -18,6 +18,8 @@
 
             <app-registry></app-registry>
 
+            <app-parks></app-parks>
+
             <app-rsvp></app-rsvp>
         </div>
 
@@ -25,4 +27,4 @@
             <img src="assets/img/ring-box.png">
             <div id="sub-footer"><div id="countdown" uk-countdown="date: 2019-11-02T18:00:00+00:00">See you in <span class="uk-countdown-number uk-countdown-days uk-text-small"> </span> days!</div></div>
         </div>
-      </div>     
+      </div>      
