--- a/src/app/parks/parks.component.html
+++ b/src/app/parks/parks.component.html
@@ -87,13 +87,15 @@
         <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
             <agm-marker 
             *ngFor="let m of markers; let i = index"
-            (markerClick)="clickedMarker(m.label, i)"
             [latitude]="m.lat"
             [longitude]="m.lng"
             >
             
           <agm-info-window>
-            <strong>InfoWindow content</strong>
+            <div style='color: black'>
+                <div>{{m.location}}</div>
+                <div>Visited by {{m.visitor}}</div>
+            </div>
           </agm-info-window>
           
         </agm-marker>
