NACHO DORITO BOLD

--- a/src/app/parks/parks.component.html
+++ b/src/app/parks/parks.component.html
@@ -93,7 +93,7 @@
             
           <agm-info-window>
             <div style='color: black'>
-                <div>{{m.location}}</div>
+                <div style="font-weight: bold">{{m.location}}</div>
                 <div>Visited by {{m.visitor}}</div>
             </div>
           </agm-info-window>
