Updated RSVP form

--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -28,6 +28,10 @@
     height: 600px;
 }
 
+#lookup-button {
+    height: 40px;
+}
+
 /* From: https://codepen.io/cihadturhan/pen/KIJdD */
 
 #plate.front {
