--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -12,11 +12,8 @@
                 <input class="uk-input" type="text" id="lastName" placeholder="Last Name">
             </div>
 
-            <div class="uk-button uk-button-default" id="lookup-button"><span>Lookup</span></div>
+            <div class="uk-button uk-button-default" id="lookup-button"><span>Look Up Invitation</span></div>
 
-            <div class="uk-margin uk-width-1-1">
-                <input class="uk-input" type="text" id="dietaryRestrictions" placeholder="Dietary Restrictions" hidden>
-            </div>
             <div class="invitees">
                 <!--FILL ME!-->
             </div>
