Disable form for those who have already RSVP'd

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,7 +1,7 @@
 <div class="site-section" id="rsvp-section">
 
   <div id="plate" class="front rsvp-container">
-    <form uk-grid class="uk-grid-small uk-text-center">
+    <form uk-grid class="uk-grid-small uk-text-center" id="rsvp-form">
     
             <legend class="uk-legend">RSVP</legend>
 
