--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -13,6 +13,7 @@
             </div>
 
             <div class="uk-button uk-button-default" id="lookup-button"><span>Look Up Invitation</span></div>
+            <div class="uk-button uk-button-default" id="lookup-searching"><img src="../../assets/img/search.gif" alt="Searching for your invitation" /></div>
 
             <div class="invitees">
                 <!--FILL ME!-->
