--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -24,10 +24,6 @@
     margin-top: 10px;
 }
 
-.invitees {
-    height: 600px;
-}
-
 #lookup-button {
     height: 60px;
     padding-top: 10px;
@@ -162,7 +158,7 @@
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
     width: 400px;
-    height: 260px;
+    /*height: 260px;*/
     top: 300px;
 
     -webkit-transition: all 0.4s ease-in-out;
