"Disable" RSVP form aka comment things out

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -3,9 +3,12 @@
   <div id="plate" class="front rsvp-container">
     <form uk-grid class="uk-grid-small uk-text-center" id="rsvp-form">
     
-            <legend class="uk-legend">RSVP</legend>
+            <!-- Remove rsvp-title ID if you want to remove large, white formatting-->
+            <legend class="uk-legend" id="rsvp-title">RSVP</legend>
+            <img src="../../assets/img/rsvp.png" alt="RSVP-icon" id="rsvp-icon">
+            <p>We will start accepting RSVP's once invitations are sent out. Look for your letter in the mail sometime in August.</p>
 
-            <div class="uk-margin uk-width-1-2">
+            <!-- <div class="uk-margin uk-width-1-2">
                 <input class="uk-input" type="text" id="firstName" placeholder="First Name">
             </div>
             <div class="uk-margin uk-width-1-2">
@@ -16,10 +19,10 @@
             <div class="uk-button uk-button-default" id="lookup-searching"><img src="../../assets/img/search.gif" alt="Searching for your invitation" /></div>
 
             <div class="invitees">
-                <!--FILL ME!-->
+                FILL ME!
             </div>
 
-            <div class="uk-button uk-button-default" id="send"><span>Submit</span></div>
+            <div class="uk-button uk-button-default" id="send"><span>Submit</span></div> -->
     </form>
   </div>
   <div id="container" class="beginning">
