Update details section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="../assets/css/dropzone.css" />
 <link rel="stylesheet" href="../assets/css/site.css" />
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Charmonman|La+Belle+Aurore|Montaga|Petit+Formal+Script|Petrona|Sree+Krushnadevaraya|Srisakdi" rel="stylesheet">
 <script src="../assets/js/uikit-icons.min.js"></script>
 <script src="../assets/js/map.js"></script>
 <script src="../assets/js/uikit.min.js"></script>
