--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<div class="site-section" id="details-section">
+<div class="site-section" id="schedule-section">
     <ul uk-switcher class="uk-subnav">
         <li><a href="#">Schedule</a></li>
         <li><a href="#">Hotel Block</a></li>
@@ -29,9 +29,7 @@
                             <p class="location">Roca Ridge</p>
                             <p class="address">5265 Prairie Sage Drive</p>
                             <p class="address">Roca, NE</p>
-                            <button class="uk-button uk-button-default" id="reception-map-button">Map</button>
-
-                            <iframe id="reception-map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Roca%20Ridge&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ&zoom=10" allowfullscreen></iframe>
+                            
                         </div>
                     </div>
             </div>
