--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -12,6 +12,8 @@
       <div class="content-wrapper">
             <app-navigation></app-navigation>
 
+            <app-details></app-details>
+            
             <app-schedule></app-schedule>
 
             <app-gallery></app-gallery>
