--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -39,32 +39,34 @@
             <div uk-grid class="uk-grid-match">
                 <div class="uk-width-1-2">
                     <div class="uk-card uk-card-body uk-card-secondary">
-                        <div uk-grid>
+                        <div uk-grid class="card-div">
                             <div class="uk-width-2-3">
                                 <p class="hotel-title"><span>Residence Inn</span> Lincoln South</p>
                                 <p>Hotel block: coming soon</p>
                                 <p>Suite-style rooms with complimentary breakfast</p>
-                                <p class="drive-time"><span>9 min.</span> from Roca Ridge</p>
                             </div>
                             <div class="uk-width-1-3">
                                 <a href="https://www.marriott.com/hotels/travel/lnkri-residence-inn-lincoln-south/" target="_blank"><button class="uk-button uk-button-default" id="residence-inn-site-button">Site</button></a>
                                 <button class="uk-button uk-button-default map-button" id="residence-inn-map-button">Map</button>
                             </div>
+                            <iframe class="hotel-map" id="residence-inn-map" width="500" height="450" frameborder="0" style="border:0; margin-top:20px;" src="https://www.google.com/maps/embed/v1/place?q=Residence%20Inn%20Lincoln%20South&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ&zoom=10" allowfullscreen></iframe>
+                            <p class="drive-time"><span>9 min.</span> from Roca Ridge</p>
                         </div>
                     </div>
                 </div>
                 <div class="uk-width-1-2">
                     <div class="uk-card uk-card-body uk-card-secondary">
-                        <div uk-grid>
+                        <div uk-grid class="card-div">
                             <div class="uk-width-2-3">
                                 <p class="hotel-title"><span>Holiday Inn</span> Lincoln Southwest</p>
                                 <p>Standard rooms with an indoor pool</p>
-                                <p class="drive-time"><span>11 min.</span> from Roca Ridge</p>
                             </div>
                             <div class="uk-width-1-3">
                                 <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/lincoln/lnkne/hoteldetail" target="_blank"><button class="uk-button uk-button-default" id="holiday-inn-site-button">Site</button></a>
                                 <button class="uk-button uk-button-default map-button" id="holiday-inn-map-button">Map</button>
                             </div>
+                            <iframe class="hotel-map" id="holiday-inn-map" width="500" height="450" frameborder="0" style="border:0; margin-top:20px;" src="https://www.google.com/maps/embed/v1/place?q=Holiday%20Inn%20Lincoln%20Southwest&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ&zoom=10" allowfullscreen></iframe>
+                            <p class="drive-time"><span>11 min.</span> from Roca Ridge</p>
                         </div>
                     </div>
                 </div>
