--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,6 +6,7 @@
                         <li class="uk-active"><a href="#details-section">Details</a></li>
                         <li><a href="#rsvp-section">RSVP</a></li>
                         <li><a href="#registry-section">Registry</a></li>
+                        <li><a href="#faq-section">FAQ</a></li>
                         <li><a href="#story-section">Our Story</a></li>
                         <li><a href="#photos-section">Photos</a></li>
                     </ul>
