--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -8,31 +8,48 @@
         <li>
             <div uk-grid class="uk-grid-divider">
                 <div class="uk-width-1-2 uk-text-right">
-                    <div class="time">5:00pm</div>
+                    <div class="time">4:00pm</div>
                 </div>
                 <div class="uk-width-1-2">
                     <div class="schedule-item">
                         <p class="title uk-text-lead">Ceremony</p>
-                        <p class="location">Roca Ridge</p>
-                        <p class="address">5265 Prairie Sage Drive</p>
-                        <p class="address">Roca, NE</p>
-                        <!-- <button class="uk-button uk-button-default">Map</button> -->
+                        <p class="location">Main Barn</p>
                     </div>
                 </div>
 
                 <div class="uk-width-1-2 uk-text-right">
-                        <div class="time">6:00pm</div>
+                        <div class="time">5:00pm</div>
                     </div>
                     <div class="uk-width-1-2">
                         <div class="schedule-item">
-                            <p class="title uk-text-lead">Reception</p>
-                            <p class="location">Roca Ridge</p>
-                            <p class="address">5265 Prairie Sage Drive</p>
-                            <p class="address">Roca, NE</p>
+                            <p class="title uk-text-lead">Cocktail Hour</p>
+                            <p class="location">Log Cabin</p>
                             
                         </div>
                     </div>
+            
+
+            <div class="uk-width-1-2 uk-text-right">
+                <div class="time">6:00pm</div>
             </div>
+            <div class="uk-width-1-2">
+                <div class="schedule-item">
+                    <p class="title uk-text-lead">Dinner</p>
+                    <p class="location">Main Barn</p>
+                </div>
+            </div>
+
+            <div class="uk-width-1-2 uk-text-right">
+                <div class="time">7:30pm</div>
+            </div>
+            <div class="uk-width-1-2">
+                <div class="schedule-item">
+                    <p class="title uk-text-lead">Dessert &amp; Dancing!</p>
+                    <p class="location">Main Barn</p>
+                    
+                </div>
+            </div>
+        </div>
         </li>
 
         <li>
