--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -21,6 +21,8 @@
             <app-registry></app-registry>
 
             <app-parks></app-parks>
+
+            <app-faq></app-faq>
             
             <app-gallery></app-gallery>
         </div>
